OneMaster/smart-distribution-web/k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: distribution-web
  namespace: distribution
spec:
  replicas: 1
  selector:
    matchLabels:
      app: distribution-web
      version: 'v1'
  template:
    metadata:
      labels:
        app: distribution-web
        version: 'v1'
    spec:
      containers:
        - name: distribution-web
          image: 192.168.100.32:9777/distribution/distribution-manager:latest
          ports:
          - containerPort: 80
            protocol: TCP
